# qomxwidget

./: .gitignore  CMakeLists.txt
cmake/: FindQOMXWidget.cmake
cmake/modules/: FindQDBusDaemon.cmake  VQtVersion.cmake
include/qomxwidget/player/: Player.h
include/qomxwidget/widget/: Widget.h
sample/player/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
sample/widget/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/: CMakeLists.txt
src/player/: CMakeLists.txt  Player.cpp
src/widget/: CMakeLists.txt  Widget.cpp
